# gbreveng

./: .gitignore  Makefile.am  configure.ac
doc/: db.html  dmg_cells.html  dmg_cells2.html  dmg_cpu_connections.html  dmg_reset.html  index.html  mem_patterns.html  np_gb_memory.html  ppu  skip_ff50.html  sm83_cells.html  wide_boy.html
doc/img/cells/sm83/: README
doc/img/osc/: channels.txt
drv_dmglcd/: .gitignore  Makefile.am  drv_dmglcd.pcf  img.sv  img.v  top.sv  top.v
genclk/: Makefile.am  genclk.pcf  rom.s  top.sv  top.v
m4/: expansions.m4
mrd_test/: Makefile.am  mrd_test.pcf  rom.s  top.sv  top.v
pcb/bga.pretty/: SOURCE
pcb/cartfix/: .gitignore  cartfix-cache.lib  cartfix.kicad_pcb  cartfix.kicad_prl  cartfix.kicad_pro  cartfix.kicad_sch  cartfix.pro  cartfix.sch
pcb/conn_audio.pretty/: SOURCE
pcb/conn_card.pretty/: SOURCE
pcb/conn_lib/: SOURCE
pcb/conn_usb.pretty/: SOURCE
pcb/disp_bridge/: .gitignore  disp_bridge-cache.lib  disp_bridge.kicad_pcb  disp_bridge.kicad_prl  disp_bridge.kicad_pro  disp_bridge.kicad_sch  disp_bridge.pro  disp_bridge.sch  fp-lib-table
pcb/fpgaboard/: .gitignore  74lvc8t245.lib  audio.kicad_sch  audio.sch  bank0.kicad_sch  bank0.sch  bank1.kicad_sch  bank1.sch  bank2.kicad_sch  bank2.sch  bank3.kicad_sch  bank3.sch  bom.ods  cart_ma.kicad_sch  cart_ma.sch  cart_sl.kicad_sch  cart_sl.sch  fp-lib-table  fpgaboard-cache.lib  fpgaboard-rescue.lib  fpgaboard.kicad_pcb  fpgaboard.kicad_prl  fpgaboard.kicad_pro  fpgaboard.kicad_sch  fpgaboard.pro  fpgaboard.sch  fpgaboard.xml  gbreveng_ftdi_template.xml  hx8k_iomap.txt  lt3030efe#trpbf.lib  memory.kicad_sch  memory.sch  power.kicad_sch  power.sch  sio.kicad_sch  sio.sch  sram.dcm  sram.lib  sym-lib-table  tda7050.lib
pcb/fpgaboard/fcc.pretty/: Molex-SD-52045-2145.kicad_mod
pcb/fpgaboard/gb_conn.pretty/: GBC_Link_Port.kicad_mod  GameBoy_Cartridge_Socket_SMD.kicad_mod
pcb/fpgaboard/housing.pretty/: 32-SOP.kicad_mod  44-400mil-TSOP-2.kicad_mod
pcb/fpgaboard/logo.pretty/: Hello.kicad_mod  Shroom.kicad_mod  Yoshi.kicad_mod  hello.kicad_mod  shroom.kicad_mod
pcb/ft2232_lib/: SOURCE  ft2232.lib
pcb/lattice_lib/: SOURCE
pcb/lcdpwr/: .gitignore  lcdpwr-cache.lib  lcdpwr.kicad_pcb  lcdpwr.kicad_prl  lcdpwr.kicad_pro  lcdpwr.kicad_sch  lcdpwr.pro  lcdpwr.sch  lt3463.lib  mc33063a.lib  sym-lib-table
pcb/lib/: Amplifier_Audio_TDA7050.kicad_sym  FPGA_Lattice_ICE40HX8K.kicad_sym  Memory_RAM_IS62WV10248ExLL.kicad_sym  Regulator_Linear_LT3030.kicad_sym  Regulator_Switching_LT3463.kicad_sym
pcb/lib/Connector_GameBoy.pretty/: CGB_External-Link-Port.kicad_mod  Cartridge_Socket_SMD.kicad_mod  DMG_FFC_LCD-Board_21Pin.kicad_mod
pcb/oscillators_lib/: SOURCE
pcb/soundfix/: .gitignore  soundfix-cache.lib  soundfix.kicad_pcb  soundfix.kicad_prl  soundfix.kicad_pro  soundfix.kicad_sch  soundfix.pro  soundfix.sch  sym-lib-table
pcb/switch_lib/: SOURCE
shiva/: .gitignore  Makefile.am  cdc.sv  counter.sv  counter.v  counter_block.sv  counter_block.v  debounce.sv  dp_reg.sv  dp_reg.v  lr35902_cpu.v  memmap  shiva-constraints.py  shiva.pcf  top.sv  top.v
skip_ff50/: Makefile.am  rom.s  skip_ff50.pcf  top.sv  top.v
test_hw/: .gitignore  Makefile.am  test_hw-constraints.py  test_hw.pcf  test_hw.sv
test_roms/: .gitignore  Makefile.am  common.s  disp-test.s  dma-vram.s  dma-wram.s  eidi.s  halt.s  hram-rw.s  move-logo.s  oam-rw.s  rom-rw.s  rout.s  sck-in.s  stop.s  vram-rw.s  w-hram.s  wram-rw.s  xram-rw.s
wb64agb_flash_dump/: .gitignore  dump.pcf  dump.sv
wb64agb_prom_dump/: Makefile.am  dump.pcf  dump.sv
